[tool.poetry]
name = "super-exchange-analyze"
version = "0.1.0"
description = ""
authors = ["yqq <youngqqcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.2"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
